--- a/estilos.css
+++ b/estilos.css
@@ -27,14 +27,14 @@ div p{
     opacity: 0.5;
     color:moccasin;
 }
+
 .navbar-nav.navbar-center {
     position: absolute;
     left: 22%; 
-    transform: translatex(-15%);
-    font-size: 18px;
-    font-weight: 700;
-    margin: 40px 10px;
-    padding: 2px 20px;
+    transform: translatex(-9%);
+    font-size: 16px;
+    margin: 10px 10px;
+    padding: 8px 20px;
     background-color:lightsteelblue;
 }
 div img{
@@ -48,13 +48,14 @@ div img{
     -webkit-transform:scale(1.3);
     transform:scale(1.3);
 }
+
 .fondo{
-    background-image:url(./imagenes/fondo.jpg) ;
+    background-image:url(./imagenes/profile.jpeg);
     position:relative;
-	width: 100%;
-    background-size:100% 70%;
+    width: 100%;
+    background-size:100% 180%;
     background-attachment: fixed;
-    padding: 80px;
+    padding: 290px;
 }
 .footer{
     background-color: gray;
