--- a/estilos.css
+++ b/estilos.css
@@ -5,7 +5,7 @@
 
 }
 body{
-    background: #f3f3f3;
+    background-image:  linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
 	font-family: 'Open Sans', sans-serif;
 }
 img{
@@ -13,7 +13,7 @@ img{
     height: 150px;
     margin: 0.2cm;
 }
-h1,h2{
+h1,h2,h5{
     text-align: center;
     color:mintcream;
 }
@@ -37,7 +37,8 @@ div p{
     font-size: 16px;
     margin: 10px 10px;
     padding: 8px 20px;
-    background-color:lightsteelblue;
+    background-color:rgba(245, 223, 57, 0.837);
+    border-radius: 5px;
 }
 div img{
 	padding: 0; 
@@ -45,6 +46,7 @@ div img{
     cursor: pointer;
     display: flex;
     flex-wrap: wrap;
+    border-radius: 10px;
 }
 .img-container:hover img {
     -webkit-transform:scale(1.3);
@@ -60,6 +62,54 @@ div img{
     padding: 290px;
 }
 .footer{
-    background-color: gray;
-    padding: 25px;
+    background-color:rgba(245, 223, 57, 0.837);
+    padding: 5px;
+}
+
+.modal{
+    background: rgb(0, 0, 0, .3);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box{
+    opacity: 0.9;
+    background: #f7f264;
+    box-shadow: 0px 0px 5px 0px rgb(0, 0, 0,0.3);
+    border-radius: 5px;
+    font-family:cursive ;
+    padding: 30px;
+    text-align:center;
+    width: 900px;
+
+}
+
+.btnclose{
+    font-size: 16px;
+    line-height: 16px;
+    display: block;
+    text-align: right;
+    color: #BBBBBB;
+    
+}
+/* .btnClose{
+    color:#000;
+} */
+.modal h4{
+    font-size: 20px;
+    font-weight: 80;
+    margin-bottom: 10px;
+    color:olive;
+} 
+
+footer img{
+    width: 40px;
+    margin:0px 20px;
+    
 }
