--- a/estilos.css
+++ b/estilos.css
@@ -18,7 +18,7 @@ img{
     margin: 0.2cm;
 }
 h3{
-    text-align: justify;
+    text-align: center;
     color:mintcream;
     margin-left: 20px;
 }
@@ -134,5 +134,5 @@ footer img{
 video{
     padding: 20px;
     width: 700px;
-    margin-left: 350px;
+    margin-left: 200px;
 }
