--- a/estilos.css
+++ b/estilos.css
@@ -5,11 +5,11 @@
 
 }
 body{
-    background-image:  linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
+    background-image:  linear-gradient(60deg, #baee71 0%, #fbed96 100%);
 	font-family: 'Open Sans', sans-serif;
 }
 .body-project{
-    background-image:  linear-gradient(60deg, rgb(127, 199, 174) 0%, #d0bd44 100%);
+   /*  background-image:  linear-gradient(60deg, rgb(127, 199, 174) 0%, #d0bd44 100%); */
 	font-family: 'Open Sans', sans-serif;
 }
 img{
