se agreaga media query en css

--- a/estilos.css
+++ b/estilos.css
@@ -63,6 +63,9 @@ h2{
     color:mintcream;
     padding-left: 7rem;
 }
+.name-empresas{
+    padding-left: 5rem;
+}
 div h1{
     margin: 1cm;
     font-size:100px;
@@ -94,7 +97,6 @@ div p{
 } */
 #table-container{
     width: 100%;
-    ;
 }
 .img{
     width: 13rem;
@@ -123,7 +125,7 @@ div p{
 .footer{
     background-color:rgba(245, 223, 57, 0.837);
     padding: 5px;
-    height: 6em;
+    height: 10em;
 }
 
 /* .modal{
@@ -222,4 +224,27 @@ video{
     display: block;
     margin-right: auto;
     margin-left: auto;
+}
+
+@media (min-width:1500px){
+    .navbar-nav.navbar-center {
+        position: absolute;
+        left: 29%; 
+        font-size: 16px;
+        margin: 10px 10px;
+        padding: 8px 20px;
+        background-color:rgba(245, 223, 57, 0.837);
+        border-radius: 5px;
+    }
+    #table-container{
+        width: 100%;
+        position:relative;
+        left: 12%;
+    }
+    .img{
+        width: 15rem;
+        height: 13rem;
+        margin: 10px; 
+        border-radius: 100px;
+    }
 }
