--- a/estilos.css
+++ b/estilos.css
@@ -32,9 +32,11 @@ h6{
     color:white;
     text-align: center;
 }
-.h1-project{
+.h2-project{
     /* padding: 20px ; */
-    font-size: 100px;
+    font-size: 50px;
+    background-color:rgba(245, 223, 57, 0.837);
+    margin:0em 10em;
 }
 h1{
     text-align: center;
@@ -47,6 +49,8 @@ h1{
     color:mintcream;
     font-size: 3em;
     letter-spacing: 0.3em;
+    background-color:rgba(245, 223, 57, 0.837);
+    margin:0em 8em;
 }
 h2{
     text-align: center;
@@ -77,7 +81,7 @@ div p{
     color:moccasin;
 }
 
-.navbar-nav.navbar-center {
+/* .navbar-nav.navbar-center {
     position: absolute;
     left: 21%; 
     font-size: 16px;
@@ -85,7 +89,7 @@ div p{
     padding: 8px 20px;
     background-color:rgba(245, 223, 57, 0.837);
     border-radius: 5px;
-}
+} */
 .photo{
     width: 10vw;
     height: 5vh;
